--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
             <h3> na ber hoile o ami kintu shikbo</h3>
             <p>This paragraph says will continue my fight</p>
         </section>
+        <section>
+            <h1 class="text-5xl"> this is large text </h1>
+            <h3 class="text-3xl">This is medium text</h3>
+
+            <p class="text-2xl">This is small text</p>
+            <p class="text-1xl">This is very small text</p>
+            <p class="font-bold">This is small text</p>
+            <p class="font-semibold">This is small text</p>
+            <p class="font-medium">This is small text</p>
+            <p class="text-blue-500 font-bold">Blue text </p>
+            <p class="text-right">Right text</p>
+            <p class="text-center bg-orange-600">center text</p>
+            <div class="h-14 bg-gradient-to-r from-sky-500 to-orange-500"></div>
+        </section>
     </main>
 </body>
 </html>
