--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <p class="text-center bg-orange-600">center text</p>
             <div class="h-14 bg-gradient-to-r from-sky-500 to-orange-500"></div>
         </section>
+        <section class="w-1/2 border">
+            <h3> About us </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto fuga porro modi ratione, atque cumque tenetur rem quasi magni unde dicta, vitae consequatur, iusto placeat est. Provident enim odio eaque!</p>
+        </section>
     </main>
 </body>
 </html>
