added margin and padding

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <p class="text-center bg-orange-600">center text</p>
             <div class="h-14 bg-gradient-to-r from-sky-500 to-orange-500"></div>
         </section>
-        <section class="w-1/2 border">
+        <section class=" w-1/2  my-5 p-2 mx-auto h-64 border-orange-600 border-8 overflow-scroll border">
             <h3> About us </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto fuga porro modi ratione, atque cumque tenetur rem quasi magni unde dicta, vitae consequatur, iusto placeat est. Provident enim odio eaque!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto fuga porro modi ratione, atque cumque tenetur rem quasi magni unde dicta, vitae consequatur, iusto placeat est. Provident enim odio eaque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit quos ratione, ut iste consectetur tempore illo? Illum ipsam, optio, ex qui voluptatem reiciendis non sint velit suscipit odio placeat impedit!</p>
         </section>
     </main>
 </body>
